--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -7,7 +7,7 @@
   </div>
   <div>
     <ul>
-    <li><a [routerLink]="['/login']" routerLinkActive="router-link-active">Login</a></li>
+    <li><a [routerLink]="['/login']" routerLinkActive="router-link-active" (click)="logout()">{{login}}</a></li>
     </ul>
   </div>
 </div>
