--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -31,6 +31,12 @@
           <input type="password" class="form-control" id="password" name="password" ngModel>
         </div>
       </div>
+      <div class="form-group row" *ngIf="!signIn">
+        <label for="myfile" class="col-md-2 col-form-label">Select Profile Pic.</label>
+        <div class="col-md-3">
+          <input type="file" id="myfile" name="myfile" (change)=onFileselect($event)>
+      </div>
+    </div>
       <div class="form-group row">
         <div class="col-md-5">
             <button (click)="signUp()" type="button" class="m-3 btn btn-link">{{regLabel}}</button>
