--- a/src/app/task/task.component.html
+++ b/src/app/task/task.component.html
@@ -5,10 +5,19 @@
       <div class="col-md-6">
         <input type="text" class="form-control" id="description" name="description" ngModel>
       </div>
-      <button type="submit" class="btn btn-primary col-md-1">Add Task</button>
+      <button type="submit" class="btn btn-primary col-md-1 btn-sm">Add Task</button>
     </div>
     </form>
+
     <div class="row mt-5">
+        <div class="col-md-10 text-left mb-2">
+          <select class="custom-select" (change)="search($event.target.value)">
+            <option selected>Filter Tasks based on status</option>
+            <option value="1">All Tasks</option>
+            <option value="2">Completed Tasks</option>
+            <option value="3">Pending Tasks</option>
+          </select>
+        </div>
         <div class="col-md-10">
            <table class="table table-hover">
              <thead>
@@ -30,5 +39,10 @@
             </tbody>
            </table>
         </div>
+    </div>
+    <div class="form-group row">
+      <label for="myfile" class="col-md-2 col-form-label">Select Profile Pic.</label>
+      <div class="col-md-3">
+        <input type="file" id="myfile" name="myfile" (change)=onFileselect($event)>
     </div>
 </div>
