alert modal commit

--- a/src/app/task/task.component.css
+++ b/src/app/task/task.component.css
@@ -1,5 +1,14 @@
+*{
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+
 img {
   width: 100px;
   height: 100px;
   border-radius: 50px;
+}
+
+.container {
+  background-color: whitesmoke;
 }
