--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,6 +1,8 @@
 * {
   margin: 0px;
   padding: 0px;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: bold;
 }
 
 #header {
@@ -15,14 +17,16 @@ ul li{
   display: inline-block;
   color: white;
   padding: 10px;
+
 }
 
  a {
   text-decoration: none;
 }
 
-li:hover {
+li:hover, li:hover a {
   background-color: slateblue;
   border-radius: 10px;
+  color: white;
 }
 
