--- a/src/app/task/task.component.html
+++ b/src/app/task/task.component.html
@@ -41,11 +41,11 @@
                 <th></th>
             </thead>
             <tbody>
-                <tr *ngFor="let task of tasks;let i=index">
+                <tr *ngFor="let task of tasks;let i=index" class="{{task.completed === false ? 'table-success' : 'table-warning'}}">
                   <td>{{i+1}}</td>
                   <td>{{task.description}}</td>
                   <td>{{task.completed === false ? 'Pending' : 'Complete'}}</td>
-                  <td><button type="button" class="btn btn-link text-success" (click)="editTask(task._id)">Edit</button></td>
+                  <td ><button type="button" class="btn btn-link text-success" (click)="editTask(task._id)">Edit</button></td>
                   <td><button type="button" class="btn btn-link text-danger" (click)="deleteTask(task._id)">Delete</button></td>
                   <td hidden>{{task._id}}</td>
                 </tr>
